fix: fix layout bugs on product page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1448,6 +1448,10 @@ button.reset-btn {
     }
 }
 
+.similar-goods {
+    padding-bottom: 40px;
+}
+
 //product page end
 @import "media";
 //product page end
